<resources>
    <string name="_auto_payment">(Auto Payment)</string>
    <string name="_merchant">Merchant:</string>
    <string name="_subscription_date">Subscription date:</string>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="ac_type_header">Account Type</string>
    <string name="ac_type_islamic">Islamic</string>
    <string name="ac_type_regular">Regular</string>
    <string name="ac_type_text">Please select what type of account you want to open</string>
    <string name="account_list_no_account_found">No account found</string>
    <string name="account_list_no_matching_account_found">No matching account found</string>
    <string name="account_suspended_text">Your account has been suspended or locked temporarily. Please contact with Customer Support Center.</string>
    <string name="account_suspended_title">Account Suspended</string>
    <string name="acitivity_title_ac_type">Account Type</string>
    <string name="acitivity_title_scan_id">Scan ID</string>
    <string name="acitivity_title_scanned_data">Scanned Data</string>
    <string name="acknowledgement_confirmation_text">Do you want to perform acknowledgement of &lt;b>%1$s&lt;/b> Tk. to partner?</string>
    <string name="acknowledgement_done_text">Acknowledgement Successful</string>
    <string name="acknowledgement_failure_text">Acknowledgement Failed</string>
    <string name="acknowledgement_in_progress">Processing</string>
    <string name="acknowledgement_success_text">Acknowledgement Successful</string>
    <string name="action_search">Search</string>
    <string name="action_search_distributor">Search Distributor</string>
    <string name="action_search_dso">Search DSO</string>
    <string name="action_search_merchant">Search Merchant</string>
    <string name="action_sell">Sell</string>
    <string name="action_settings">Settings</string>
    <string name="activation_success_content_text">"Your device is ready for use 
 Your Virtual Card Number is 
 %s"</string>
    <string name="activation_success_header_text">Welcome to Nagad App</string>
    <string name="activity_tilte_limit_and_charges">Limit &amp; Charges</string>
    <string name="activity_title_Insurance">Insurance Policy</string>
    <string name="activity_title_about">About</string>
    <string name="activity_title_acknowledge">Cash Acknowledgement</string>
    <string name="activity_title_add_money_choose_source">Choose Source</string>
    <string name="activity_title_additional_document">Additional Documents</string>
    <string name="activity_title_additional_info">Additional Info</string>
    <string name="activity_title_agent_info">Uddokta Information</string>
    <string name="activity_title_agent_list">Uddokta List</string>
    <string name="activity_title_agent_scanner">Uddokta Scanner</string>
    <string name="activity_title_b2b_transfer">B2B Transfer</string>
    <string name="activity_title_b2m_transfer">B2M Transfer</string>
    <string name="activity_title_bill_pay">Bill Pay</string>
    <string name="activity_title_cash_in">Cash In</string>
    <string name="activity_title_cash_out">Cash Out</string>
    <string name="activity_title_cash_out_or_shadhin_pay">Cash Out</string>
    <string name="activity_title_contacts">Contacts</string>
    <string name="activity_title_crop_photo">Edit Photo</string>
    <string name="activity_title_customer_registration">Registration</string>
    <string name="activity_title_daily_ibadat">Daily Ibadat</string>
    <string name="activity_title_device_change">Device Change Verification</string>
    <string name="activity_title_dh_info">Distributor Info</string>
    <string name="activity_title_dmo">DMO</string>
    <string name="activity_title_donation">Donation</string>
    <string name="activity_title_dpo_list">DPO List</string>
    <string name="activity_title_dps">DPS</string>
    <string name="activity_title_dps_referral">Refer</string>
    <string name="activity_title_dps_tx_history">DPS Transaction History</string>
    <string name="activity_title_dso_info">DSO Info</string>
    <string name="activity_title_football_star">Football Star</string>
    <string name="activity_title_games">Games</string>
    <string name="activity_title_hajj_guide">Hajj Guide</string>
    <string name="activity_title_history">History</string>
    <string name="activity_title_holy_quran">Holy Quran</string>
    <string name="activity_title_home">Home</string>
    <string name="activity_title_income_tax">Income Tax</string>
    <string name="activity_title_islamic_life">Islamic Life</string>
    <string name="activity_title_islamic_quiz">Islamic Quiz</string>
    <string name="activity_title_login">Login</string>
    <string name="activity_title_merchant_info">Merchant Info</string>
    <string name="activity_title_merchant_pay">Merchant Pay</string>
    <string name="activity_title_mfi">EMI Payment</string>
    <string name="activity_title_my_bills">My Bills</string>
    <string name="activity_title_my_emi">My EMI</string>
    <string name="activity_title_my_nagad">My Nagad</string>
    <string name="activity_title_nagad_10_taka">10Taka Run</string>
    <string name="activity_title_nagad_mela">Nagad Mela</string>
    <string name="blink_instruction_text">Blink your eyes several times to capture photo.</string>
    <string name="business_rb_text">Business</string>
    <string name="caution_text">Do not shake your face when capturing photo.</string>
    <string name="common_next_text">Next</string>
    <string name="common_ok_text">OK</string>
    <string name="common_user_prompt">You do not have an active Nagad account. If you are a Grameenphone user, please select \"Grameenphone Activation\" or if you are a Robi/Airtel user, please select \"Robi/Airtel Activation\" to activate your Nagad account. Otherwise please register by visiting your nearest Nagad Uddokta Point or by Self-Registration. Call 16167 for more information.&lt;br>&lt;br>*You are agreeing to open Nagad A/C by sharing NID information with Nagad preserved at Grameenphone/Robi and accepting Terms &amp; Conditions at &lt;a href=%1$s>%1$s&lt;/a></string>
    <string name="female_rb_text">Female</string>
    <string name="glass_remove_instruction">Remove your eye glass(if have any).</string>
    <string name="hint_occupation">Occupation</string>
    <string name="hint_occupation_text">Specify your Occupation</string>
    <string name="housewife_rb_text">Housewife</string>
    <string name="instruction_1">1</string>
    <string name="instruction_2">2</string>
    <string name="instruction_3">3</string>
    <string name="instruction_4">4</string>
    <string name="instruction_5">5</string>
    <string name="key_code_48">48</string>
    <string name="key_code_49">49</string>
    <string name="key_code_50">50</string>
    <string name="key_code_51">51</string>
    <string name="key_code_52">52</string>
    <string name="key_code_53">53</string>
    <string name="key_code_54">54</string>
    <string name="key_code_55">55</string>
    <string name="key_code_56">56</string>
    <string name="key_code_57">57</string>
    <string name="key_code_negative_4">-4</string>
    <string name="key_code_negative_5">-5</string>
    <string name="key_label_0">@string/digit_0</string>
    <string name="key_label_1">@string/digit_1</string>
    <string name="key_label_2">@string/digit_2</string>
    <string name="key_label_3">@string/digit_3</string>
    <string name="key_label_4">@string/digit_4</string>
    <string name="key_label_5">@string/digit_5</string>
    <string name="key_label_6">@string/digit_6</string>
    <string name="key_label_7">@string/digit_7</string>
    <string name="key_label_8">@string/digit_8</string>
    <string name="key_label_9">@string/digit_9</string>
    <string name="key_label_del">DEL</string>
    <string name="key_label_done">DONE</string>
    <string name="kyc_detail">KYC Detail</string>
    <string name="kyc_detail_label_bearing_account">Profit Bearing Account</string>
    <string name="kyc_detail_label_birth_date">@string/input_hint_birth_date</string>
    <string name="kyc_detail_label_id_number">@string/input_hint_id_no</string>
    <string name="kyc_detail_label_id_type">@string/input_hint_id_type</string>
    <string name="kyc_detail_label_kyc_tracking_number">@string/input_hint_kyc_tracking_no</string>
    <string name="kyc_detail_label_mobile_no">@string/input_hint_mobile</string>
    <string name="light_instruction">Make sure there is enough light around.</string>
    <string name="male_rb_text">Male</string>
    <string name="mno_airtel">Airtel</string>
    <string name="mno_base_tnc_prompt">You don’t have an active Nagad account. Please select your mobile number operator.&lt;br>&lt;br>For any issue or inquiry, please call 16167&lt;br>&lt;br>*You are authorizing Nagad to collect your National ID (NID) card data from your mobile operators and others; accepting our terms and conditions (&lt;a href=%1$s>%1$s&lt;/a>) to verify and open Nagad account.</string>
    <string name="mno_bl">Banglalink</string>
    <string name="mno_gp">Grameenphone</string>
    <string name="mno_header_amount_text">Amount</string>
    <string name="mno_header_data_text">Data</string>
    <string name="mno_header_minute_text">Minutes</string>
    <string name="mno_header_sms_text">SMS</string>
    <string name="mno_header_validity_text">Validity</string>
    <string name="mno_robi">Robi</string>
    <string name="mno_selection_text">Select your current mobile network operator</string>
    <string name="mno_teletalk">Teletalk</string>
    <string name="nagad_text">Nagad</string>
    <string name="other_operator_text">Other Operators</string>
    <string name="others_rb_text">Others</string>
    <string name="place_your_photo_in_boundary">Place your face in photo frame.</string>
    <string name="robi_airtel_activation_text">Robi/Airtel Activation</string>
    <string name="service_rb_text">Service</string>
    <string name="student_rb_text">Student</string>
    <string name="text_gp_activation">Grameenphone Activation</string>
    <string name="text_robi_base_selfie_instruction">A selfie is required for PIN setup. This image will not be used anywhere without your permission.</string>
</resources>