<?xml version="1.0" encoding="utf-8"?>
<Keyboard android:keyWidth="@fraction/number_keyboard_key_width" android:keyHeight="@dimen/number_keyboard_key_height" android:horizontalGap="@dimen/number_keyboard_horizontal_gap" android:verticalGap="@dimen/number_keyboard_vertical_gap"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <Row>
        <Key android:codes="@string/key_code_49" android:keyLabel="@string/key_label_1" />
        <Key android:codes="@string/key_code_50" android:keyLabel="@string/key_label_2" />
        <Key android:codes="@string/key_code_51" android:keyLabel="@string/key_label_3" />
    </Row>
    <Row>
        <Key android:codes="@string/key_code_52" android:keyLabel="@string/key_label_4" />
        <Key android:codes="@string/key_code_53" android:keyLabel="@string/key_label_5" />
        <Key android:codes="@string/key_code_54" android:keyLabel="@string/key_label_6" />
    </Row>
    <Row>
        <Key android:codes="@string/key_code_55" android:keyLabel="@string/key_label_7" />
        <Key android:codes="@string/key_code_56" android:keyLabel="@string/key_label_8" />
        <Key android:codes="@string/key_code_57" android:keyLabel="@string/key_label_9" />
    </Row>
    <Row>
        <Key android:codes="@string/key_code_negative_5" android:isRepeatable="true" android:keyLabel="@string/key_label_del" />
        <Key android:codes="@string/key_code_48" android:keyLabel="@string/key_label_0" />
        <Key android:codes="@string/key_code_negative_4" android:keyLabel="@string/key_label_done" />
    </Row>
</Keyboard>