<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:tag="layout/activity_mno_base_selection_0" android:layout_width="fill_parent" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:bind="http://schemas.android.com/apk/res-auto">
    <include layout="@layout/appbar_normal" />
    <TextView android:id="@id/tv_terms_and_condition" android:padding="@dimen/dp10" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="10.0dip" android:text="@string/mno_base_tnc_prompt" android:layout_marginStart="@dimen/common_margin_right_for_all_card_ui_" android:layout_marginEnd="@dimen/common_margin_left_for_all_card_ui" />
    <TextView android:gravity="center" android:layout_gravity="center_horizontal" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="5.0dip" android:layout_marginBottom="10.0dip" android:text="@string/mno_selection_text" />
    <RadioGroup android:layout_gravity="center_horizontal" android:id="@id/mno_radio_group" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_margin="20.0dip">
        <RadioButton android:id="@id/mno_ttalk" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/mno_teletalk" />
        <RadioButton android:id="@id/mno_gp" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/mno_gp" />
        <RadioButton android:id="@id/mno_robi" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/mno_robi" />
        <RadioButton android:id="@id/mno_airtel" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/mno_airtel" />
        <RadioButton android:id="@id/mno_bl" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/mno_bl" />
    </RadioGroup>
    <include android:id="@id/submit_btn" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginStart="20.0dip" android:layout_marginEnd="20.0dip" layout="@layout/view_progress_button" />
</LinearLayout>