<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:tag="layout/view_mno_bundle_header_0" android:layout_width="fill_parent" android:layout_height="wrap_content" style="@style/MnoBundleListHeaderBackgroundStyle"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:orientation="horizontal" android:paddingTop="7.0dip" android:paddingBottom="7.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:paddingStart="5.0dip" android:paddingEnd="5.0dip" android:layout_marginStart="15.0dip">
        <TextView android:id="@id/minutes_label_tv" android:layout_width="0.0dip" android:text="@string/mno_header_minute_text" android:layout_weight="1.0" style="@style/centeredTabHeaderPrimaryColoredText" />
        <TextView android:id="@id/data_label_tv" android:layout_width="0.0dip" android:text="@string/mno_header_data_text" android:layout_weight="1.0" style="@style/centeredTabHeaderPrimaryColoredText" />
        <TextView android:id="@id/sms_label_tv" android:layout_width="0.0dip" android:text="@string/mno_header_sms_text" android:layout_weight="1.0" style="@style/centeredTabHeaderPrimaryColoredText" />
        <TextView android:id="@id/validity_label_tv" android:layout_width="0.0dip" android:text="@string/mno_header_validity_text" android:layout_weight="1.0" style="@style/centeredTabHeaderPrimaryColoredText" />
        <TextView android:id="@id/amount_label_tv" android:layout_width="0.0dip" android:text="@string/mno_header_amount_text" android:layout_weight="1.0" style="@style/centeredTabHeaderPrimaryColoredText" />
    </LinearLayout>
    <View android:background="@color/kona_light_gray" android:layout_width="fill_parent" android:layout_height="@dimen/home_card_view_item_seperator_width_height" />
</LinearLayout>