<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:id="@id/applicant_gender_holder_view" android:tag="layout/view_occupation_option_0" android:layout_width="fill_parent" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="10.0dip" android:text="@string/hint_occupation" />
    <LinearLayout android:orientation="vertical" android:id="@id/radio_group_ll" android:focusableInTouchMode="true" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/customer_reg_ll_margin_top_std" android:layout_marginBottom="@dimen/customer_reg_ll_margin_bottom_std" android:layout_below="@id/birth_date_layout"
      xmlns:android="http://schemas.android.com/apk/res/android">
        <RadioGroup android:orientation="horizontal" android:id="@id/occupation_radio_group_1" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" android:weightSum="3.0">
            <RadioButton android:id="@id/service_rb" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/radio_button_alignment_margin_left" android:text="@string/service_rb_text" android:layout_weight="1.0" />
            <RadioButton android:id="@id/business_rb" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/radio_button_alignment_margin_left" android:text="@string/business_rb_text" android:layout_weight="1.0" />
            <RadioButton android:id="@id/housewife_rb" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/radio_button_alignment_margin_left" android:text="@string/housewife_rb_text" android:layout_weight="1.0" />
        </RadioGroup>
        <RadioGroup android:orientation="horizontal" android:id="@id/occupation_radio_group_2" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" android:weightSum="3.0">
            <RadioButton android:id="@id/student_rb" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/radio_button_alignment_margin_left" android:text="@string/student_rb_text" android:layout_weight="1.0" />
            <RadioButton android:id="@id/occupation_others_rb" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/radio_button_alignment_margin_left" android:text="@string/others_rb_text" android:layout_weight="1.0" />
        </RadioGroup>
    </LinearLayout>
    <androidx.appcompat.widget.AppCompatEditText android:id="@id/occupation_others_et" android:background="@color/kona_lighter_gray" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content" android:hint="@string/hint_occupation_text" android:maxLines="4" android:lines="2" android:maxLength="@integer/occupation_other_max_length" />
    <View android:background="@color/nav_header_bg_color" android:layout_width="fill_parent" android:layout_height="1.0dip" android:layout_marginTop="5.0dip" android:layout_marginBottom="5.0dip" />
</LinearLayout>