<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:paddingLeft="@dimen/dfs_dimen_dialog_bottom_sheet_padding_left" android:paddingTop="@dimen/dfs_dimen_dialog_bottom_sheet_padding_top" android:paddingRight="@dimen/dfs_dimen_dialog_bottom_sheet_padding_right" android:paddingBottom="@dimen/dfs_dimen_dialog_bottom_sheet_padding_bottom" android:layout_width="fill_parent" android:layout_height="fill_parent" style="@style/Widget.Design.BottomSheet.Modal"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <ScrollView android:scrollbars="none" android:layout_width="fill_parent" android:layout_height="wrap_content" android:fillViewport="true">
        <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <TextView android:gravity="center_horizontal" android:id="@id/title_view" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="15.0dip" android:text="@string/kyc_detail" style="@style/dfsDialogTitleStyle" />
            <LinearLayout android:id="@id/kyc_tracking_no_holder_view" style="@style/detailSheetItem">
                <TextView android:text="@string/kyc_detail_label_kyc_tracking_number" style="@style/detailSheetItemLabel" />
                <TextView android:id="@id/kyc_tracking_no_view" style="@style/detailSheetItemValue" />
                <include layout="@layout/view_bottom_sheet_detail_item_divider" />
            </LinearLayout>
            <LinearLayout android:id="@id/mobile_no_holder_view" style="@style/detailSheetItem">
                <TextView android:text="@string/kyc_detail_label_mobile_no" style="@style/detailSheetItemLabel" />
                <TextView android:id="@id/mobile_no_view" style="@style/detailSheetItemValue" />
                <include layout="@layout/view_bottom_sheet_detail_item_divider" />
            </LinearLayout>
            <LinearLayout android:id="@id/kyc_id_type_holder_view" style="@style/detailSheetItem">
                <TextView android:text="@string/kyc_detail_label_id_type" style="@style/detailSheetItemLabel" />
                <TextView android:id="@id/id_type_view" style="@style/detailSheetItemValue" />
                <include layout="@layout/view_bottom_sheet_detail_item_divider" />
            </LinearLayout>
            <LinearLayout android:id="@id/kyc_id_no_holder_view" style="@style/detailSheetItem">
                <TextView android:text="@string/kyc_detail_label_id_number" style="@style/detailSheetItemLabel" />
                <TextView android:id="@id/id_no_view" style="@style/detailSheetItemValue" />
                <include layout="@layout/view_bottom_sheet_detail_item_divider" />
            </LinearLayout>
            <LinearLayout android:id="@id/birth_date_holder_view" style="@style/detailSheetItem">
                <TextView android:text="@string/kyc_detail_label_birth_date" style="@style/detailSheetItemLabel" />
                <TextView android:id="@id/birth_date_view" style="@style/detailSheetItemValue" />
                <include layout="@layout/view_bottom_sheet_detail_item_divider" />
            </LinearLayout>
            <LinearLayout android:id="@id/interest_bearing_status_holder_view" style="@style/detailSheetItem">
                <TextView android:text="@string/kyc_detail_label_bearing_account" style="@style/detailSheetItemLabel" />
                <TextView android:id="@id/bearing_account_yes_no_view" style="@style/detailSheetItemValue" />
            </LinearLayout>
            <LinearLayout android:gravity="right" android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="25.0dip">
                <Button android:textColor="?dialogPositiveColor" android:id="@id/action_ok_view" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/common_ok_text" style="@style/dfsDialogPositiveButtonStyle" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>