<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:tag="layout/activity_selfie_instruction_0" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <include layout="@layout/appbar_normal" />
    <ScrollView android:layout_width="fill_parent" android:layout_height="fill_parent">
        <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <de.hdodenhof.circleimageview.CircleImageView android:layout_gravity="center" android:id="@id/selfie_image_civ" android:background="@color/transparent" android:layout_width="80.0dip" android:layout_height="80.0dip" android:layout_marginTop="@dimen/dp20" android:src="@drawable/img_selfie" android:transitionName="profileImage" app:civ_border_color="?colorPrimaryDark" app:civ_border_width="2.0dip" />
            <TextView android:gravity="center" android:layout_gravity="center" android:id="@id/tv_robi_base_instruction" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/dp20" android:text="@string/text_robi_base_selfie_instruction" android:layout_marginStart="@dimen/dp10" android:layout_marginEnd="@dimen/dp10" />
            <RelativeLayout android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_marginTop="10.0dip">
                <LinearLayout android:orientation="horizontal" android:id="@id/instruction_one_ll" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginStart="60.0dip" android:layout_marginEnd="15.0dip">
                    <FrameLayout android:id="@id/frame_1" android:background="@drawable/circle_bg" android:layout_width="20.0dip" android:layout_height="20.0dip">
                        <TextView android:textStyle="bold" android:layout_gravity="center" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/instruction_1" android:textAlignment="center" />
                    </FrameLayout>
                    <TextView android:id="@id/instruction_one" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" android:text="@string/glass_remove_instruction" />
                </LinearLayout>
                <LinearLayout android:orientation="horizontal" android:id="@id/instruction_two_ll" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="20.0dip" android:layout_below="@id/instruction_one_ll" android:layout_marginEnd="15.0dip" android:layout_alignStart="@id/instruction_one_ll">
                    <FrameLayout android:background="@drawable/circle_bg" android:layout_width="20.0dip" android:layout_height="20.0dip">
                        <TextView android:textStyle="bold" android:layout_gravity="center" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/instruction_2" />
                    </FrameLayout>
                    <TextView android:id="@id/instruction_two" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" android:text="@string/place_your_photo_in_boundary" />
                </LinearLayout>
                <LinearLayout android:orientation="horizontal" android:id="@id/instruction_three_ll" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="20.0dip" android:layout_below="@id/instruction_two_ll" android:layout_marginEnd="15.0dip" android:layout_alignStart="@id/instruction_one_ll">
                    <FrameLayout android:background="@drawable/circle_bg" android:layout_width="20.0dip" android:layout_height="20.0dip">
                        <TextView android:textStyle="bold" android:layout_gravity="center" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/instruction_3" />
                    </FrameLayout>
                    <TextView android:id="@id/instruction_three" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" android:text="@string/light_instruction" />
                </LinearLayout>
                <LinearLayout android:orientation="horizontal" android:id="@id/instruction_four_ll" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="20.0dip" android:layout_below="@id/instruction_three_ll" android:layout_marginEnd="15.0dip" android:layout_alignStart="@id/instruction_one_ll">
                    <FrameLayout android:background="@drawable/circle_bg" android:layout_width="20.0dip" android:layout_height="20.0dip">
                        <TextView android:textStyle="bold" android:layout_gravity="center" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/instruction_4" />
                    </FrameLayout>
                    <TextView android:id="@id/instruction_four" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" android:text="@string/caution_text" />
                </LinearLayout>
                <LinearLayout android:orientation="horizontal" android:id="@id/instruction_five_ll" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="20.0dip" android:layout_below="@id/instruction_four_ll" android:layout_marginEnd="15.0dip" android:layout_alignStart="@id/instruction_one_ll">
                    <FrameLayout android:background="@drawable/circle_bg" android:layout_width="20.0dip" android:layout_height="20.0dip">
                        <TextView android:textStyle="bold" android:layout_gravity="center" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/instruction_5" />
                    </FrameLayout>
                    <TextView android:id="@id/instruction_five" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" android:text="@string/blink_instruction_text" />
                </LinearLayout>
            </RelativeLayout>
            <Button android:id="@id/next_btn" android:layout_marginLeft="50.0dip" android:layout_marginTop="30.0dip" android:layout_marginRight="50.0dip" android:layout_marginBottom="20.0dip" android:text="@string/common_next_text" android:layout_alignParentBottom="true" style="@style/DfsSingleLongAppCompatButton" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>