<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:padding="@dimen/dp5" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView android:textSize="@dimen/sp18" android:textStyle="bold" android:textColor="@color/kona_black" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/dp10" android:text="@string/nagad_text" android:layout_marginStart="@dimen/dp20" android:layout_marginEnd="@dimen/dp20" />
    <TextView android:textSize="@dimen/sp15" android:textColor="@color/kona_black" android:id="@id/tv_content" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/dp10" android:text="@string/common_user_prompt" android:layout_marginStart="@dimen/dp20" android:layout_marginEnd="@dimen/dp20" />
    <Button android:textSize="@dimen/sp12" android:textColor="@color/colorPrimaryDark" android:gravity="end|center" android:id="@id/btn_gp_base" android:background="@null" android:padding="@dimen/dp5" android:layout_width="fill_parent" android:layout_height="wrap_content" android:foreground="?android:selectableItemBackground" android:text="@string/text_gp_activation" android:layout_marginStart="@dimen/dp20" android:layout_marginEnd="@dimen/dp20" />
    <Button android:textSize="@dimen/sp12" android:textColor="@color/colorPrimaryDark" android:gravity="end|center" android:id="@id/btn_robi_airtel_base" android:background="@null" android:padding="@dimen/dp5" android:layout_width="fill_parent" android:layout_height="wrap_content" android:foreground="?android:selectableItemBackground" android:text="@string/robi_airtel_activation_text" android:layout_marginStart="@dimen/dp20" android:layout_marginEnd="@dimen/dp20" />
    <Button android:textSize="@dimen/sp12" android:textColor="@color/colorPrimaryDark" android:gravity="end|center" android:id="@id/btn_other_number" android:background="@null" android:padding="@dimen/dp5" android:layout_width="fill_parent" android:layout_height="wrap_content" android:foreground="?android:selectableItemBackground" android:text="@string/other_operator_text" android:layout_marginStart="@dimen/dp20" android:layout_marginEnd="@dimen/dp20" />
</LinearLayout>